# pathologic-mesh-viewer

./: CMakeLists.txt  README.md  main.c  mesh.c  mesh.h
src/: app.rc  clip_line.c  clip_line.h  clip_triangle.c  clip_triangle.h  draw.h  draw_globals.c  draw_line.c  draw_triangle.c  load_mesh.c  load_texture.c  main.c  math.h  mesh.h  texture.h
